bad tcp checksum not detected
This issue was migrated from bug 8629 in our old bug tracker.
Original bug information:
Reporter: den…@gma…
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 1.8.6
Attachments:
wiresharkBug.pcap: packet with bad checksum
bug8629_1.patch: Patch to indicate 0x0000 as a bad checksum but still allow reassembly.
bug8629_2.patch: Patch to indicate 0x0000 as a bad checksum and allow reassembly for any checksum.
bug8629_3.patch: Treat invalid checksum of 0x0000 no different than any other invalid checksum.