Treat invalid checksum of 0x0000 no different than any other invalid checksum. Fixes https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8629 #BACKPORT (1.10, 1.8, 1.6)

svn path=/trunk/; revision=49332