epan/dissectors/packet-tcp.c
@@ -852,7 +852,7 @@ tcp_analyze_sequence_number(packet_info *pinfo, guint32 seq, guint32 ack, guint3
 	 * If the SYN and SYN/ACK were received out-of-order,
 	 * the ISN is ack-1. If we missed the SYN/ACK, but got
 	 * the last ACK of the 3WHS, the ISN is ack-1. For all
-	 * all other packets the ISN is unknown, so ack-1 is 
+	 * all other packets the ISN is unknown, so ack-1 is
 	 * as good a guess as ack.
      */
     if( (tcpd->rev->base_seq==0) && (flags & TH_ACK) ) {
@@ -2315,7 +2315,7 @@ tcp_dissect_pdus(tvbuff_t *tvb, packet_info *pinfo, proto_tree *tree,
                 /*
                  * Display the PDU length as a field
                  */
-                item=proto_tree_add_uint((proto_tree *)pinfo->tcp_tree, 
+                item=proto_tree_add_uint((proto_tree *)pinfo->tcp_tree,
                                          hf_tcp_pdu_size,
                                          tvb, offset, plen, plen);
                 PROTO_ITEM_SET_GENERATED(item);
@@ -4595,21 +4595,6 @@ dissect_tcp(tvbuff_t *tvb, packet_info *pinfo, proto_tree *tree)
 
                 /* Checksum is valid, so we're willing to desegment it. */
                 desegment_ok = TRUE;
-            } else if (th_sum == 0) {
-                /* checksum is probably fine but checksum offload is used */
-                item = proto_tree_add_uint_format(tcp_tree, hf_tcp_checksum, tvb,
-                                                  offset + 16, 2, th_sum, "Checksum: 0x%04x [Checksum Offloaded]", th_sum);
-
-                checksum_tree = proto_item_add_subtree(item, ett_tcp_checksum);
-                item = proto_tree_add_boolean(checksum_tree, hf_tcp_checksum_good, tvb,
-                                              offset + 16, 2, FALSE);
-                PROTO_ITEM_SET_GENERATED(item);
-                item = proto_tree_add_boolean(checksum_tree, hf_tcp_checksum_bad, tvb,
-                                              offset + 16, 2, FALSE);
-                PROTO_ITEM_SET_GENERATED(item);
-
-                /* Checksum is (probably) valid, so we're willing to desegment it. */
-                desegment_ok = TRUE;
             } else {
                 item = proto_tree_add_uint_format(tcp_tree, hf_tcp_checksum, tvb,
                                                   offset + 16, 2, th_sum,
@@ -5738,7 +5723,8 @@ proto_register_tcp(void)
         &tcp_summary_in_tree);
     prefs_register_bool_preference(tcp_module, "check_checksum",
         "Validate the TCP checksum if possible",
-        "Whether to validate the TCP checksum",
+        "Whether to validate the TCP checksum or not.  "
+        "(Invalid checksums will cause reassembly, if enabled, to fail.)",
         &tcp_check_checksum);
     prefs_register_bool_preference(tcp_module, "desegment_tcp_streams",
         "Allow subdissector to reassemble TCP streams",
